--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>       
         </article>
-        <article class="container-fluid">
+        <article class="container">
         <div class="row"id="boxPesquisa">
 
         </article>
@@ -188,39 +188,41 @@
                             <h1>Novidades</h1>
                         </div>
                     </div>
-                    <div class="row materias">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-                            <img class="imagens_novidades" src="imagens/shang-chi.jpg" alt="">
+                    <div id="materias">
+                        <div class="row materias">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                                <img class="imagens_novidades" src="imagens/shang-chi.jpg" alt="">
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
+                                <h2>Conheça o mais novo herói da Marvel!</h2>
+                                <p>No dia 19/04 a Marvel divulgou o trailer de sua mais nova empreitada no universo
+                                    cinematográfico. Shang Chi contará a histrória do personagem de mesmo nome, que surgiu
+                                    nos quadrinhos na decáda de 70.</p>
+                            </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
-                            <h2>Conheça o mais novo herói da Marvel!</h2>
-                            <p>No dia 19/04 a Marvel divulgou o trailer de sua mais nova empreitada no universo
-                                cinematográfico. Shang Chi contará a histrória do personagem de mesmo nome, que surgiu
-                                nos quadrinhos na decáda de 70.</p>
+                        <div class="row materias">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                                <img class="imagens_novidades" src="imagens/invocacao-do-mal-3.jpg" alt="">
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
+                                <h2>É divulgado o trailer de Invocação do Mal 3.</h2>
+                                <p>O mais novo filme do universo de invicação do mal promete muitos mistérios e sustos.
+                                    Dessa vez, o caso abordado é o de Arne Cheyenne Johnson, o primeiro réu a usar uma
+                                    suposta possessão demôniaca como defesa em uma corte americana.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row materias">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-                            <img class="imagens_novidades" src="imagens/invocacao-do-mal-3.jpg" alt="">
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
-                            <h2>É divulgado o trailer de Invocação do Mal 3.</h2>
-                            <p>O mais novo filme do universo de invicação do mal promete muitos mistérios e sustos.
-                                Dessa vez, o caso abordado é o de Arne Cheyenne Johnson, o primeiro réu a usar uma
-                                suposta possessão demôniaca como defesa em uma corte americana.</p>
-                        </div>
-                    </div>
-                    <div class="row materia_3">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-4">
-                            <img class="imagens_novidades" src="imagens/spider-man-tobey-maguire.jpg" alt="">
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
-                            <h2>Homem-Aranha de Tobey de volta às telas?</h2>
-                            <p>Em uma entrevista, realizada no dia 16/04, Alfred Molina, Dr.Octopus da trilogia original
-                                do Homem-Aranha, confirmou sua participação no mais novo filme do Aranha de Tom Holland,
-                                também dando a entender que a história aconteceria imediatamente após o final do segundo
-                                filme, de 2004.
-                            </p>
+                        <div class="row materia_3">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                                <img class="imagens_novidades" src="imagens/spider-man-tobey-maguire.jpg" alt="">
+                            </div>
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-8 texto_materia">
+                                <h2>Homem-Aranha de Tobey de volta às telas?</h2>
+                                <p>Em uma entrevista, realizada no dia 16/04, Alfred Molina, Dr.Octopus da trilogia original
+                                    do Homem-Aranha, confirmou sua participação no mais novo filme do Aranha de Tom Holland,
+                                    também dando a entender que a história aconteceria imediatamente após o final do segundo
+                                    filme, de 2004.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
